--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,6 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/user/public_html/personal_website
     - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp styles/styles.css $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
+    - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R styles $DEPLOYPATH
